@@ -15,8 +15,6 @@
  */
 package net.javacrumbs.jsonunit.core.internal;
 
-import static java.util.stream.Collectors.toList;
-
 import java.util.Collection;
 import java.util.List;
 import java.util.regex.Pattern;
@@ -36,7 +34,7 @@ abstract class PathMatcher {
         if (paths == null || paths.isEmpty()) {
             return EMPTY;
         }
-        List<PathMatcher> matchers = paths.stream().map(PathMatcher::create).collect(toList());
+        List<PathMatcher> matchers = paths.stream().map(PathMatcher::create).toList();
         return new AggregatePathMatcher(matchers);
     }
 
